# CMR-notifier

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  cloudformation.yml  pyproject.toml
.github/workflows/: build-and-deploy.yml  deploy.yml  release.yml  static-analysis.yml  test.yml
cicd/: cicd-cf.yml  cidc-cf.yml
scripts/: subscribe.py
scripts/umm-sub/: sentinel-1-burst-sub.json  sentinel-1a-slc-sub.json  sentinel-1b-slc-sub.json  sentinel-1c-slc-sub.json
src/: main.py
src/cmr_notifier/: __init__.py  main.py
stacks/: cidc-cf.yml  s1-burst-cf.yml  s1-slc-cf.yml  s1a-slc-cf.yml  s1c-slc-cf.yml  sqs-to-sns-cf.yml
tests/: conftest.py  test_lambda.py
tests/data/: cmr_response.csv  cmr_response1.csv  cmr_response2.csv
tests/integration/: sentinel-1-burst-received.json  sentinel-1c-slc-received.json
